fixing: slider section spacing issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -791,6 +791,16 @@ section {
           user-select: none;
 }
 
+.portfolio-section {
+  padding-bottom: 100px;
+}
+
+@media (max-width: 480px) {
+  .portfolio-section {
+    padding-bottom: 130px;
+  }
+}
+
 .portfolio-section .container {
   position: relative;
   z-index: 1;
@@ -950,7 +960,6 @@ section {
 
 .swiper {
   position: relative;
-  padding: 50px 0;
 }
 
 @media (max-width: 480px) {
@@ -960,7 +969,14 @@ section {
 }
 
 .swiper-wrapper {
-  padding: 30px 0;
+  padding-top: 40px;
+  padding-bottom: 10px;
+}
+
+@media (max-width: 480px) {
+  .swiper-wrapper {
+    padding-bottom: 60px;
+  }
 }
 
 .swiper-slide {
