--- a/assets/scss/layout/_slider.scss
+++ b/assets/scss/layout/_slider.scss
@@ -1,14 +1,15 @@
 .swiper {
   position: relative;
-  padding: 50px 0;
+  // padding: 50px 0;
   @include max(480px) {
     padding: 10px 30px;
   }
   &-wrapper {
-    padding: 30px 0;
-    // @include max(480px) {
-    //   padding: 0;
-    // }
+    padding-top: 40px;
+    padding-bottom: 10px;
+    @include max(480px) {
+      padding-bottom: 60px;
+    }
   }
   &-slide {
     width: 255px;
